--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,3 +15,9 @@ GlobalDefaultGameMode=/Game/Core/Blueprints/Bp_Gamemode.Bp_Gamemode_C
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Tower_Defense")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/Tower_Defense")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
